[gd_scene load_steps=3 format=3 uid="uid://dpgq745lcc7l3"]

[ext_resource type="Script" uid="uid://vf7a4w1qmwee" path="res://Code/UI/ShipSelection/ship_selection.gd" id="1_ovkry"]
[ext_resource type="Resource" uid="uid://bns4or540wnqb" path="res://Data/Ships/all_ships_list.tres" id="2_8voi5"]

[node name="ShipSelection" type="Node2D"]

[node name="ship_selection" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_ovkry")
ship_list = ExtResource("2_8voi5")
start_destination = &"test_level"

[node name="HBoxContainer" type="HBoxContainer" parent="ship_selection"]
custom_minimum_size = Vector2(1080, 620)
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1180.0
offset_bottom = 670.0
theme_override_constants/separation = 0

[node name="ships_panel" type="PanelContainer" parent="ship_selection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ship_selection/HBoxContainer/ships_panel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ship_buttons_hbox" type="HBoxContainer" parent="ship_selection/HBoxContainer/ships_panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="ship_details" type="HBoxContainer" parent="ship_selection/HBoxContainer/ships_panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="large_ship_image" type="TextureRect" parent="ship_selection/HBoxContainer/ships_panel/VBoxContainer/ship_details"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ship_selection/HBoxContainer/ships_panel/VBoxContainer/ship_details"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ship_name_label" type="Label" parent="ship_selection/HBoxContainer/ships_panel/VBoxContainer/ship_details/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "ship name here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ship_detail_rtl" type="RichTextLabel" parent="ship_selection/HBoxContainer/ships_panel/VBoxContainer/ship_details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "ship description goes here"

[node name="spacer" type="Control" parent="ship_selection/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ship_selection/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="difficulty_setting" type="VBoxContainer" parent="ship_selection/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="diff_label" type="Label" parent="ship_selection/HBoxContainer/VBoxContainer/difficulty_setting"]
layout_mode = 2
text = "Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="ship_selection/HBoxContainer/VBoxContainer/difficulty_setting"]
layout_mode = 2
max_value = 5.0
value = 1.0
tick_count = 6
ticks_on_borders = true

[node name="Control" type="Control" parent="ship_selection/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="btn_start" type="Button" parent="ship_selection/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"
